--- a/src/DateTime/style.scss
+++ b/src/DateTime/style.scss
@@ -1,8 +1,8 @@
-table {
-  margin: auto;
-  font-size: 150%;
-}
-
 .sep {
   color: darkblue;
+}
+
+#datetime {
+  text-align: center;
+  font-size: 3rem;
 }
